# prezoids

./: .gitignore  LICENSE  Makefile.am  configure.ac  main.cpp  makefile  readme.md
Images/: Makefile.am  makefile  old_mk_file
Tools/Smg/: machine.py  test.sh  test.sm
src/: Makefile.am  camera.cpp  camera.h  game_limits.cpp  game_limits.h  game_positions.cpp  game_positions.h  game_textures.cpp  game_textures.h  globals.cpp  globals.h  main.cpp  mobs.cpp  mobs.h  overworld_state.cpp  overworld_state.h  polygons.cpp  polygons.h  start_screen_state.cpp  start_screen_state.h  test_mobs.cpp  test_mobs.h  test_polygons.cpp  test_polygons.h  test_tiles.cpp  test_tiles.h  testworld_state.cpp  testworld_state.h  tiles.cpp  tiles.h  underworld_state.cpp  underworld_state.h  ut.cpp  ut.h  utils.cpp  utils.h
